# golit

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  README.md  golit_benchmark.md  index.html  mkdocs.yml  objects.inv  project_scope.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml
about/benchmarks/: index.html
about/comparison/: index.html
about/contributing/: index.html
about/faq/: index.html
advanced/: index.html
advanced/audio/: index.html
advanced/custom-rendering/: index.html
advanced/deployment/: index.html
advanced/live-sources/: index.html
advanced/server-push/: index.html
advanced/sessions/: index.html
advanced/video-streams/: index.html
advanced/websockets/: index.html
bench/: README.md  __init__.py  gen_app.py  instrument.py  plot.py  run_b1.py  run_b1_dash.py  run_b1_dash_http.py  run_b1_marimo.py  run_b1_streamlit.py  run_memo.py  run_memo_http.py
bench/apps/: __init__.py  dash_app.py  dash_memo.py  dash_memo_server.py  dash_server.py  marimo_gen.py  streamlit_app.py
bench/http/: __init__.py  drive.py  load.py  run_b1_http.py  run_b2.py  run_b2_push.py  serve.py  serve_memo.py  serverctl.py
bench/results/: .gitignore  b1.csv  b1_dash.csv  b1_dash_bytes.csv  b1_dash_http.csv  b1_dash_render.csv  b1_http.csv  b1_marimo.csv  b1_streamlit.csv  b2.csv  b2_push.csv  b_memo.csv  b_memo_http.csv
concepts/: index.html
concepts/architecture/: index.html
concepts/data-flow/: index.html
concepts/reactivity/: index.html
deploy/: Dockerfile  docker-compose.yml  nginx.conf  verify_scaling.py
deploy/scaling_demo/: app.py
docs/: index.md  install.md
docs/about/: benchmarks.md  comparison.md  contributing.md  faq.md
docs/advanced/: audio.md  custom-rendering.md  deployment.md  index.md  live-sources.md  security.md  server-push.md  sessions.md  video-streams.md  websockets.md
docs/concepts/: architecture.md  data-flow.md  index.md  reactivity.md
docs/reference/: app.md  charts.md  data.md  gis.md  index.md  layout.md  server.md  ui.md  widgets.md
docs/tutorial/: charts.md  first-app.md  index.md  inputs.md  layout.md  maps.md  running.md  sql.md  the-graph.md  ui-components.md  views.md
examples/audio_recorder/: app.py
examples/browser_camera/: app.py
examples/charts_gallery/: app.py
examples/chat/: app.py
examples/components_gallery/: app.py
examples/duckdb_sql/: app.py
examples/earth_engine/: app.py
examples/face_detect/: app.py
examples/geo_explorer/: app.py  districts.geojson
examples/great_tables/: app.py
examples/live_great_table/: app.py
examples/live_sheets/: app.py
examples/modular/: README.md  _app.py  app.py  reactives.py  sources.py  views.py
examples/raster_explorer/: app.py
examples/rgb_composite/: app.py
examples/sales_explorer/: app.py
examples/terrain_analysis/: app.py
examples/tiled_raster/: app.py
examples/vector_tiles/: app.py
examples/webcam_stream/: app.py
golit_pages/: golit_benchmark_methodology_document.md
golit_pages/golit_api_reference/: code.html
golit_pages/golit_app_dashboard_preview/: code.html
golit_pages/golit_architecture_scaling/: code.html
golit_pages/golit_benchmarks_performance/: code.html
golit_pages/golit_component_gallery/: code.html
golit_pages/golit_contributing_community/: code.html
golit_pages/golit_dag_graph_explorer/: code.html
golit_pages/golit_deployment_scaling_manager/: code.html
golit_pages/golit_documentation_hub/: code.html
golit_pages/golit_error_boundary_logs/: code.html
golit_pages/golit_getting_started/: code.html
golit_pages/golit_home/: code.html
golit_pages/golit_logic/: DESIGN.md
golit_pages/golit_login_auth_portal/: code.html
golit_pages/golit_project_roadmap/: code.html
install/: index.html
python/golit/: __init__.py  __main__.py  _golit.pyi  _loader.py  app.py  charts.py  cli.py  data.py  engine.py  gis.py  hashing.py  layout.py  nodes.py  registry.py  ui.py  widgets.py
python/golit/rendering/: __init__.py  charts.py  html.py  interactive.py  protocol.py
python/golit/server/: __init__.py  audio.py  chat.py  factory.py  polling.py  processing.py  pubsub.py  redis_pubsub.py  routes.py  session.py  session_store.py  sse.py  streaming.py  tiles.py  vector_tiles.py
reference/: index.html
reference/app/: index.html
reference/charts/: index.html
reference/data/: index.html
reference/gis/: index.html
reference/layout/: index.html
reference/server/: index.html
reference/ui/: index.html
reference/widgets/: index.html
search/: search_index.json
src/: core.rs  lib.rs
stylesheets/: extra.css
tests/: test_audio.py  test_chat.py  test_duckdb.py  test_engine.py  test_gis.py  test_gis_ee.py  test_gis_terrain.py  test_gis_tiles.py  test_gis_vector_tiles.py  test_great_tables.py  test_interactive.py  test_layout.py  test_polling.py  test_processing.py  test_redis_pubsub.py  test_rendering.py  test_server.py  test_session_store.py  test_sse.py  test_streaming.py  test_ui.py  test_widgets.py
tutorial/: index.html
tutorial/charts/: index.html
tutorial/first-app/: index.html
tutorial/inputs/: index.html
tutorial/layout/: index.html
tutorial/maps/: index.html
tutorial/running/: index.html
tutorial/sql/: index.html
tutorial/the-graph/: index.html
tutorial/ui-components/: index.html
tutorial/views/: index.html
