[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "golit"
version = "0.1.0"
description = "A high-performance Reactive DAG framework for Python — Streamlit, until it goes to production."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["reactive", "dag", "dataframe", "polars", "htmx", "litestar"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
]
dependencies = [
    "litestar>=2.12",
    "polars>=1.0",
    "lets-plot>=4.5",
    "numpy>=1.26",     # Lets-Plot ↔ Polars interop converts series via numpy
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# Multi-worker fan-out backend; only needed when GOLIT_REDIS_URL is set.
redis = ["redis>=5.0"]

[project.scripts]
golit = "golit.cli:main"

[dependency-groups]
dev = [
    "maturin>=1.7,<2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.maturin]
python-source = "python"
module-name = "golit._golit"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Widgets are used as parameter defaults (slider(...), upload(...)) — the core
# Golit programming model, à la FastAPI's Depends(); B008 doesn't apply.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["golit"]
mypy_path = "python"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
